@@ -70,6 +70,7 @@ struct IEngine
 
   virtual void GetFileList(const char* directory, std::vector<std::string>& vs) = 0;
   virtual CConfigFile* OpenFile(const char* filename) = 0;
+  virtual void FlushFile(CConfigFile* file) = 0;
   virtual void CloseFile(CConfigFile* file) = 0;
 
   virtual IFile* OpenRawFile(const char* filename, bool writeable) = 0;
