@@ -13,6 +13,7 @@
   - added IsLayerReflective and SetLayerReflective (Brian Robb)
   - fix GetCurrentMap() in map entry scripts
   - don't crash when loading a corrupt spriteset
+  - added file_object.flush()
 
 2003.01.29
   - make ExecuteGame work no matter where the game calling it is
